deploy/htdocs/version/src/inc/style/component/_footer.scss
.component-footer {
	@include size(100%, auto);
	padding: 0 $sizeGrid * 3;
	background: $colorPrimary;

	.top-section {
		@include size(100%, auto);
		padding: $sizeGrid * 2 0;
		display: flex;
		justify-content: space-between;
		position: relative;

		&:after {
			@include size(100%, 1px);
			@include pos(auto, auto, 0, 50%);
			transform: translateX(-50%);
			position: absolute;
			content: '';
			background: rgba($colorWhite, .1);
		}
	}

	.middle-section,
	.bottom-section {
		font-size: 0;
		vertical-align: top;
		padding: $sizeGrid * 2 0;
	}

	.contact-options {
		@extend %reset-list;
		@include size(auto, $sizeGrid);
		line-height: $sizeGrid;
		white-space: nowrap;
	}

	.contact-option {
		color: #fff;
		display: inline-block;
		vertical-align: middle;

		.link {
			font: 400 1.6rem / 1 $fontOpenSans;
		}

		&:not(:first-child) {
			margin-left: $sizeGrid * 2;
		}
	}

	.copyright {
		font: 400 1.4rem / 1 $fontOpenSans;
		color: $colorSecondary;
	}

	ul {
		@extend %reset-list;
		display: inline-block;
		vertical-align: top;

		&.full-list {
			width: 100%;
		}

		&.half-list {
			width: 50%;
		}
	}

	.social {
		li {
			@include size($sizeGrid);
			display: inline-block;
			position: relative;
		}

		a {
			color: $colorSecondary;
		}

		.icon {
			@include abs-center($sizeGrid / 2);
		}
	}

	.call-to-actions {
		display: inline-block;
		vertical-align: top;
		font-size: 0;
		color: #fff;

		a {
			text-decoration: none;
		}

		&.left {
			@include size(40%, auto);

			li {
				display: block;
				margin-bottom: $sizeGrid / 4;
			}

			a {
				font: 400 1.8rem / 1 $fontOpenSans;
				color: $colorWhite;
			}
		}

		&.middle {
			@include size(calc(60% - #{$sizeGrid * 3}), auto);

			li {
				display: block;
				margin-bottom: $sizeGrid / 2;
			}

			a {
				font: 400 1.4rem / 1 $fontOpenSans;
				color: $colorSecondary;
			}
		}

		&.right {
			@include size($sizeGrid * 3, auto);
		}
	}

	@include respond-to(SMALL) {
		padding: 0 $sizeGrid * 2;

		.top-section {
			flex-direction: column;
		}

		.contact-options {
			height: auto;
			white-space: normal;
			margin: $sizeGrid * 2 0;
		}

		.contact-option {
			font-size: mobile-size(2.4rem);
			width: 100%;

			&:not(:first-child) {
				margin: 0;
			}
		}

		.top-section,
		.middle-section,
		.bottom-section {
			padding: $sizeGrid * 2 0 0;
		}

		.bottom-section {
			padding: $sizeGrid 0 $sizeGrid * 2;
		}

		.call-to-actions {
			width: 100%;

			&:not(:last-child) {
				margin-bottom: $sizeGrid;
			}

			&.left {
				width: 100%;

				a {
					font-size: mobile-size(2.8rem);
				}
			}

			&.middle {
				width: 100%;

				a {
					font-size: mobile-size(2.2rem);
				}
			}

			&.right {
				width: 100%;
			}
		}

		ul {
			&.half-list {
				width: 100%;
			}
		}

		.social {
			text-align: center;

			li {
				@include size($sizeGrid * 2);
				margin: 0 $sizeGrid;
			}

			.icon {
				@include abs-center($sizeGrid);
			}
		}

		.copyright {
			font-size: mobile-size(1.8rem);
			text-align: center;
		}
	}
}

